--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,14 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="rounded_corner">
+        <item name="cornerSize">25dp</item>
+    </style>
+
+    <style name="cut_corner">
+        <item name="cornerSize">25dp</item>
+        <item name="cornerFamily">cut</item>
+    </style>
+
 </resources>
