--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,61 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <GridView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="20dp">
+        android:layout_height="match_parent"
+        android:numColumns="2"
+        android:id="@+id/grid_view"/>
 
-        <TextView
-            android:textColor="@color/purple_500"
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Rounded Corner"
-            android:textSize="25sp"
-            android:layout_gravity="center"
-            />
-        <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:adjustViewBounds="true"
-            android:padding="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            android:src="@drawable/foto4"
-            app:shapeAppearance="@style/rounded_corner"
-            app:strokeColor="@color/teal_700"
-            app:strokeWidth="5dp" />
-
-        <TextView
-            android:textColor="@color/purple_500"
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Cut Corner"
-            android:textSize="25sp"
-            android:layout_gravity="center"
-            />
-        <com.google.android.material.imageview.ShapeableImageView
-            android:layout_marginTop="5dp"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:adjustViewBounds="true"
-            android:padding="5dp"
-            android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            android:src="@drawable/foto4"
-            app:shapeAppearance="@style/cut_corner"
-            app:strokeColor="@color/purple_200"
-            app:strokeWidth="5dp" />
-
-    </LinearLayout>
-
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
